--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material/textfield": "^14.0.0",
+    "@mui/material": "^5.14.12",
     "@supabase/supabase-js": "^2.36.0",
-    "next": "13.5.3",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
