--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material/textfield": "^14.0.0",
     "@mui/material": "^5.14.12",
     "@supabase/supabase-js": "^2.36.0",
+    "express": "^4.18.2",
     "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
