--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@material/textfield": "^14.0.0",
     "@mui/material": "^5.14.12",
-    "@supabase/supabase-js": "^2.36.0",
+    "@supabase/auth-ui-react": "^0.4.5",
+    "@supabase/auth-ui-shared": "^0.1.7",
+    "@supabase/supabase-js": "^2.38.0",
     "express": "^4.18.2",
     "next": "^13.5.4",
     "react": "18.2.0",
